@@ -99,9 +99,7 @@ int tX_audiodevice_oss :: open()
 	/* setting buffer size */	
 	buff_cfg=(globals.buff_no<<16) | globals.buff_size;
 
-#ifdef ENABLE_DEBUG_OUTPUT
-	fprintf(stderr, "[tX_adudiodevice_oss::open()] buff_no: %i, buff_size: %i, buff_cfg: %08x\n", globals.buff_no, globals.buff_size, buff_cfg);
-#endif		
+	tX_debug("tX_adudiodevice_oss::open() - buff_no: %i, buff_size: %i, buff_cfg: %08x", globals.buff_no, globals.buff_size, buff_cfg);
 	
 	p=buff_cfg;
 		
@@ -127,9 +125,7 @@ int tX_audiodevice_oss :: open()
 		
         i += ioctl(fd, SNDCTL_DSP_GETBLKSIZE, &blocksize);
 
-#ifdef ENABLE_DEBUG_OUTPUT
-	fprintf(stderr, "[tX_adudiodevice_oss::open()] blocksize: %i\n", blocksize);
-#endif		
+	tX_debug("tX_adudiodevice_oss::open() - blocksize: %i", blocksize);
 
 	samples_per_buffer=blocksize/sizeof(int16_t);
 	globals.true_block_size=samples_per_buffer/2;
